remove instagram account

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "InabaTatsuro"
   google_plus      :
   keybase          :
-  instagram        : "tatsuropianooo"
+  instagram        :
   impactstory      : 
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/tatsuro-inaba"
