--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -21,13 +21,13 @@ main:
   category: "school"
 
 - place: "Preferred Networks, Inc."
-  time: "8/2023 - 9/2023"
-  title: "Reseach and Development Engineer, Internship"
+  time: "08/2023 - 09/2023"
+  title: "Reseacher, Internship"
   subtitle: "Large Language Model Group"
   category: "work"
 
 - place: "Recruit Co., Ltd."
-  time: "9/2023 - 10/2023"
+  time: "09/2023 - 10/2023"
   title: "Machine Learning Engineer, Internship"
   subtitle: "Data Analytics Group"
   category: "work"
