add google scholar link

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Japan"
   employer         : 
   pubmed           : 
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=nHLiIasAAAAJ"
   email            : "tatsuro.pianooo@gmail.com"
   researchgate     : 
   uri              :
