add domestic journal

--- a/_data/domestic_conf.yml
+++ b/_data/domestic_conf.yml
@@ -4,6 +4,8 @@ main:
   name: "<b>Tatsuro Inaba</b>, Takuro Fujii, Ryoma Obara, Koki Shibata."
   yomi: "三言語モデル寄れば文殊の知恵を"
   conf: "NLP若手の会 (YANS) 第18回シンポジウム (2023)"
+  code: ""
+  paper: ""
   poster: "https://inabatatsuro.github.io/documents/YANS2023_poster.pdf"
   award: "Encouragement Award (20/139)"
 
@@ -11,6 +13,7 @@ main:
   name: "<b>Tatsuro Inaba</b>, Hirokazu Kiyomaru, Fei Cheng, and Sadao Kurohashi"
   yomi: "大規模言語モデルに基づく複数の外部ツールを利用した推論フレームワーク"
   conf: "The Association for the 29th Natural Language Processing (NLP 2023) in Japan."
+  code: ""
   paper: "https://www.anlp.jp/proceedings/annual_meeting/2023/pdf_dir/Q8-10.pdf"
   poster: "https://inabatatsuro.github.io/documents/NLP2023_poster.pdf"
   award: "Outstanding Award (13/579)"
