--- a/_data/domestic_conf.yml
+++ b/_data/domestic_conf.yml
@@ -1,6 +1,6 @@
 main:
 
-- title: "Two Minds Are Better Than One"
+- title: '"Two Minds Are Better Than One"'
   name: "<b>Tatsuro Inaba</b>, Takuro Fujii, Ryoma Obara, Koki Shibata."
   yomi: "「三言語モデル寄れば文殊の知恵を」"
   conf: "NLP若手の会 (YANS) 第18回シンポジウム (2023)"
@@ -9,7 +9,7 @@ main:
   poster: "https://inabatatsuro.github.io/documents/YANS2023_poster.pdf"
   award: "Encouragement Award (20/139)"
 
-- title: "Reasoning Framework with Using Multiple External Tools based on LLMs"
+- title: '"Reasoning Framework with Using Multiple External Tools based on LLMs"'
   name: "<b>Tatsuro Inaba</b>, Hirokazu Kiyomaru, Fei Cheng, and Sadao Kurohashi"
   yomi: "「大規模言語モデルに基づく複数の外部ツールを利用した推論フレームワーク」"
   conf: "The Association for the 29th Natural Language Processing (NLP 2023) in Japan."
