--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -31,3 +31,9 @@ main:
   title: "Machine Learning Engineer, Internship"
   subtitle: "Data Analytics Group"
   category: "work"
+
+- place: "Kyoto University"
+  time: "11/2023 - present"
+  title: "Office Assistant"
+  subtitle: ""
+  category: "work"
