--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification : google0c2b9e5bdd54c20f.html
+google_site_verification : HfLE5PnfeVA6wIK8FI
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
