--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification : HfLE5PnfeVA6wIK8FI
+google_site_verification : HfLE5PnfeVA6wIK8FI-W1GNLg87p7_QoSrGYfUvY5Vs
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
