--- a/_data/international_conf.yml
+++ b/_data/international_conf.yml
@@ -1,7 +1,7 @@
 main:
 - title: '"MultiTool-CoT: GPT-3 Can Use Multiple External Tools with Chain of Thought Prompting"'
   name: "<b>Tatsuro Inaba</b>, Hirokazu Kiyomaru, Fei Cheng, and Sadao Kurohashi "
-  conf: "The 61st Annual Meeting of the Association for Computational Linguistics (ACL 2023)"
+  conf: "The 61st Annual Meeting of the Association for Computational Linguistics (ACL 2023 main)"
   code: "https://github.com/InabaTatsuro/MultiTool-CoT"
   poster: "https://inabatatsuro.github.io/documents/ACL2023_poster.pdf"
   paper: "https://arxiv.org/abs/2305.16896"
